typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            96,
        ),
        hi: BytePos(
            98,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:9:5
  |
9 | var a1: { [a: string]: string };
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            129,
        ),
        hi: BytePos(
            131,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:10:5
   |
10 | var b1: { [b: string]: string };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            163,
        ),
        hi: BytePos(
            165,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:12:5
   |
12 | var a2: { [index: string]: Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            198,
        ),
        hi: BytePos(
            200,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:13:5
   |
13 | var b2: { [index: string]: Derived };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            237,
        ),
        hi: BytePos(
            239,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:15:5
   |
15 | var a3: { [index: number]: string };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            274,
        ),
        hi: BytePos(
            276,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:16:5
   |
16 | var b3: { [index: number]: string };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            312,
        ),
        hi: BytePos(
            314,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:18:5
   |
18 | var a4: { [index: number]: Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            347,
        ),
        hi: BytePos(
            349,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnIndexSignature.ts:19:5
   |
19 | var b4: { [index: string]: Derived };
   |     ^^

